--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+h1{
+    font-size:40px ;
+}
+h2{
+    font-size:30px ;
+}
+h3{
+    font-size:20px ;
+}
